--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,9 @@ Section: misc
 Priority: optional
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 9), liblzma-dev
-Homepage: http://jnovy.fedorapeople.org/pxz/
+Homepage: https://jnovy.fedorapeople.org/pxz/
 Vcs-Git: git://anonscm.debian.org/collab-maint/pxz.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/pxz.git
+Vcs-Browser: https://anonscm.debian.org/gitweb/?p=collab-maint/pxz.git
 
 Package: pxz
 Architecture: any
