--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Holger Levsen <holger@debian.org>
 Section: misc
 Priority: optional
 Standards-Version: 4.1.1
-Build-Depends: debhelper (>= 9), liblzma-dev
+Build-Depends: debhelper (>= 10.2.5~), liblzma-dev
 Homepage: https://jnovy.fedorapeople.org/pxz/
 Vcs-Git: git://anonscm.debian.org/collab-maint/pxz.git
 Vcs-Browser: https://anonscm.debian.org/gitweb/?p=collab-maint/pxz.git
