--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Standards-Version: 4.1.1
 Build-Depends: debhelper (>= 10.2.5~), liblzma-dev
 Homepage: https://jnovy.fedorapeople.org/pxz/
 Vcs-Git: git://anonscm.debian.org/collab-maint/pxz.git
-Vcs-Browser: https://anonscm.debian.org/gitweb/?p=collab-maint/pxz.git
+Vcs-Browser: https://anonscm.debian.org/git/collab-maint/pxz.git
 
 Package: pxz
 Architecture: any
