--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Priority: optional
 Standards-Version: 4.1.1
 Build-Depends: debhelper (>= 10.2.5~), liblzma-dev
 Homepage: https://jnovy.fedorapeople.org/pxz/
-Vcs-Git: git://anonscm.debian.org/collab-maint/pxz.git
-Vcs-Browser: https://anonscm.debian.org/git/collab-maint/pxz.git
+Vcs-Git: https://salsa.debian.org/debian/pxz.git
+Vcs-Browser: https://salsa.debian.org/debian/pxz.git
 
 Package: pxz
 Architecture: any
